exercícios/workloads/create_init_crashloop_backoff.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logging-agent
spec:
  containers:
    - name: exporter
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
    - name: workdir
      emptyDir: {}
