exercícios/workloads/demanding-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stress-test
  template:
    metadata:
      labels:
        app: stress-test
    spec:
      containers:
        - name: stress-ng
          image: polinux/stress-ng
          command: ["stress-ng"]
          # Adjust args to tweak memory stress levels; if pods are OOM killed immediately, consider lowering the value below 2G
          args: ["--vm-bytes", "2G", "--vm-keep", "--vm", "4"]
      nodeSelector:
        # Specify the node where you want to induce evictions
        kubernetes.io/hostname: your-host-name
# IMPORTANT NOTE:
# Ensure these files are deployed on nodes that do not have Robusta Runner, Robusta Forwarder, or Robusta Holmes running.
# Otherwise, you will probably get OOMKilled events instead of eviction events.
