exercícios/workloads/failing_liveness_probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: order-processor
spec:
  containers:
    - name: my-container
      image: busybox
      command: ["sh", "-c", "while true; do echo 'Running...'; sleep 5; done"]
      livenessProbe:
        exec:
          command:
            - sh
            - -c
            - "exit 1"
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 1000
