exercícios/workloads/failing_readiness_probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: search-engine-service
spec:
  containers:
    - name: get-details
      image: busybox
      command: ["sh", "-c", "while true; do echo 'Running...'; sleep 5; done"]
      readinessProbe:
        exec:
          command:
            - sh
            - -c
            - "exit 1"
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 3
