exercícios/workloads/pod-errors.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-error1
  namespace: pod-error
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    app: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error2
  namespace: pod-error
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "echo 'Crashed!'; exit 1"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error3
  namespace: pod-error
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error4
  namespace: pod-error
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "echo 'Hello from a short-lived container!'; sleep 5"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error5
  namespace: pod-error
spec:
  containers:
  - name: busybox
    image: busybox
    resources:
      requests:
        memory: "8Gi"  # Request a large amount of memory
    command: ["sh", "-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error6
  namespace: pod-error
spec:
  containers:
    - name: test-container
      image: nginx
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: test-secret
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error7
  namespace: pod-error
spec:
  containers:
  - name: myapp
    image: busybox
    command:
    - sh
    - -c
    - |
      echo "Starting the app ...";
      tail /dev/zero
    resources:
      limits:
        memory: "10Mi"
        cpu: "100m"
      requests:
        memory: "10Mi"
        cpu: "50m"
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error8
  namespace: pod-error
spec:
      containers:
      - name: busybox
        image: busybox
        command: ["sh", "-c", "sleep 36000"]
        readinessProbe:
          exec:
            command:
            - cat
            - /appfile
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-error9
  namespace: pod-error
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    command:
    - sh
    - -c
    - |
      echo "Simulating slow nginx startup...";
      sleep 10;
      nginx -g "daemon off;"
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 1
      periodSeconds: 5
      failureThreshold: 1
    ports:
    - containerPort: 80
