exercícios/workloads/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: res-error1
  namespace: resource
spec:
  containers:
  - name: demo
    image: polinux/stress
    command: ["stress"]
    args: ["--cpu", "4", "--timeout", "600s"]
    resources:
      requests:
        cpu: "100m"
      limits:
        cpu: "100m"
---
apiVersion: v1
kind: Pod
metadata:
  name: res-error2
  namespace: resource
spec:
  containers:
  - name: disk-hog
    image: busybox
    command: ["/bin/sh", "-c"]
    args:
    - "dd if=/dev/zero of=/file1.txt bs=1M count=1024 && sleep 3600"
    volumeMounts:
    - name: tmp-volume
      mountPath: /tmp
  volumes:
  - name: tmp-volume
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: res-error3
  namespace: resource
spec:
  containers:
  - name: quota-exceed
    image: nginx
    resources:
      limits:
        memory: "3Gi"
        cpu: "3"
      requests:
        memory: "3Gi"
        cpu: "3"
