exercícios/workloads/memes-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-deployment
  labels:
    app: meme-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meme-app
  template:
    metadata:
      labels:
        app: meme-app
    spec:
      containers:
        - name: meme-app
          # meme-generator source code available here: https://github.com/robusta-dev/Hello-DevOps-Project/tree/demo/code/meme-generator
          image: pavangudiwada/meme-generator:latest
          ports:
            - containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: meme-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: meme-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-app
  template:
    metadata:
      labels:
        app: curl-app
    spec:
      containers:
        - name: curl-container
          image: curlimages/curl:7.78.0
          command: ["/bin/sh"]
          args:
            - -c
            - |
              while true; do
                echo "Checking endpoint http://meme-service:5000...";
                curl -s http://meme-service:5000 || echo "Failed to reach http://meme-service:5000";
                sleep 30;
              done;

---
apiVersion: v1
kind: Service
metadata:
  name: meme-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: meme-app
